tests/NormalTests/paczka1/fuzzy1/52099289.err
Error in line 3: tQm S215 85,0
Error in line 20: fud1 S215 33,8
